--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ rel="stylesheet"
 />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>HPHT_COLOR_DIAMOND</title>
   </head>
   <body>
     <div id="root"></div>
